samples/_failures_safe/1761420240_ed318a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e96cce51.c: In function ‘main’:
./samples/SAFE/__tmp_e96cce51.c:149:9: error: expected expression at end of input
  149 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_e96cce51.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e96cce51.c:149:9: error: expected declaration or statement at end of input
